Commit début codage PRV

--- a/PresentationPrv/src/main/resources/com/dev/uva/prv/package_en.properties
+++ b/PresentationPrv/src/main/resources/com/dev/uva/prv/package_en.properties
@@ -1,4 +1,11 @@
 HelloWorld.message = Struts is up and running...
+prv.champObligatoire=This field is mandatory
+prv.natureAutre.obligatoire=You have to precise 
+prv.courriel.invalide=Mail format is invalid.
+client.dateNaissance=Date of birth
+client.adresse=Adress
+client.soumettre=Submit
+client.reset=Reset
 requiredstring=  ${getText(fieldName)} is required.
 password = Password
 username = User Name
@@ -20,3 +27,12 @@ rv.minute=Minute
 prv.rv=Rendezvous
 client.legend.plage=Plage horaire
 rv.notes=Notes
+client.natureDemande=Kind of Demand
+client.autreDemande=Other, precise
+client.dateRv=Rv date
+client.identifiant=Id
+validation.legend=Validation
+validation.noteImportante=Note importante
+validation.important=Important
+validation.messageSucces=Rv success
+prv.href.retour=Retour
