--- a/PresentationPrv/src/main/resources/com/dev/uva/prv/package_fr.properties
+++ b/PresentationPrv/src/main/resources/com/dev/uva/prv/package_fr.properties
@@ -1,22 +1,38 @@
 HelloWorld.message = Struts Roule
+prv.champObligatoire=Ce champs est obligatoire
+prv.courriel.invalide=Le format du courriel est invalide.
+prv.natureAutre.obligatoire=Il faut pr\u00E9ciser la nature de la demande
+client.dateNaissance=Date de naissance
+client.adresse=Adresse de domiciliation
+client.identifiant=Identifiant
 requiredstring=  ${getText(fieldName)} est requis.
 password = Mot de passe
 username = Identifiant
 submit=Connexion
-Missing.message =  Cette page est en construction. Veuillez essayer à la prochaine itération.
+Missing.message =  Cette page est en construction. Veuillez essayer Ã  la prochaine itÃ©ration.
 prv.inscription=Inscription
 prv.legend=Page de connexion
 prv.mandatory=Champ obligatoire
 client.legend=Renseignements personnels
 client.nom=Nom
-client.prenom=Prénom
+client.prenom=Pr\u00E9nom
 client.mail=Courriel
-client.phone=Téléphone
-client.preference=Je prefere etre contacte par 
-client.civilite=Civilité
+client.phone=TÃ©lÃ©phone
+client.preference=Je pr\u00E9f\u00E8re \u00EAtre contact\u00E9 par 
+client.civilite=Civilit\u00E9
 rv.date=Date
 rv.heure=Heure
 rv.minute=Minute
 prv.rv=Prise rendez vous
 client.legend.plage=Plage horaire
 rv.notes=Notes
+client.natureDemande=Nature de la demande 
+client.autreDemande=Autre, pr\u00E9ciser
+client.dateRv=Date du rendez-vous
+validation.legend=Validation
+client.soumettre=Soumettre
+client.reset=R\u00E9initialiser
+validation.noteImportante=Assurez-vous d'avoir en main, le jour de votre rendez-vous, une pi\u00E8ce d'identit\u00E9 valide (carte nationale d'identit\u00E9, passeport, acte de naissance ...)
+validation.important=Important
+validation.messageSucces=F\u00E9licitations\! Votre demande de rendez-vous a \u00E9t\u00E9 valid\u00E9e avec succ\u00E8s\!
+prv.href.retour=Retour \u00E0 la page de prive de Rv
