Modification de la méthode de sauvegarde d'un Rv.
La nouvelle méthode met à jour le client s'il existe déjà dans la base.
Donc il faut obligatoirement renseigner un identifiant.

--- a/PresentationPrv/src/main/resources/com/dev/uva/prv/package_fr.properties
+++ b/PresentationPrv/src/main/resources/com/dev/uva/prv/package_fr.properties
@@ -24,7 +24,7 @@ rv.date=Date
 rv.heure=Heure
 rv.minute=Minute
 prv.rv=Prise rendez vous
-client.legend.plage=Plage horaire
+client.legend.plage=Rendez-vous
 rv.notes=Notes
 client.natureDemande=Nature de la demande 
 client.autreDemande=Autre, pr\u00E9ciser
