Début de codage de la partie de pilotage

--- a/PresentationPrv/src/main/resources/com/dev/uva/prv/package_en.properties
+++ b/PresentationPrv/src/main/resources/com/dev/uva/prv/package_en.properties
@@ -37,3 +37,8 @@ validation.important=Important
 validation.messageSucces=Rv success
 prv.href.retour=Retour
 prv.langue=Fran\u00E7ais
+prv.header.natureDemande=Kind of demand
+prv.header.dateRv=Day of Rv
+prv.header.nom=Name
+prv.header.modeCommunication=Communication mode
+prv.pilotage.listerv=List of RV
