--- a/PresentationPrv/src/main/resources/com/dev/uva/prv/package_fr.properties
+++ b/PresentationPrv/src/main/resources/com/dev/uva/prv/package_fr.properties
@@ -37,3 +37,8 @@ validation.important=Important
 validation.messageSucces=F\u00E9licitations\! Votre demande de rendez-vous a \u00E9t\u00E9 valid\u00E9e avec succ\u00E8s\!
 prv.href.retour=Retour \u00E0 la page de prive de Rv
 prv.langue=English
+prv.header.natureDemande=Demande
+prv.header.dateRv=Date de r\u00E9servation
+prv.header.nom=Nom complet
+prv.header.modeCommunication=Mode de communication
+prv.pilotage.listerv=Liste des rendez-vous
